// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`compiler > . 1`] = `
[
  "@layer utilities {
  /* caslon-utilities: bg-primary-15-15-10 */
  .bg-primary-15-15-10 {
    background-color: var(---color-primary-15-15-10);
  }
}
",
]
`;

exports[`compiler > . 2`] = `
[
  "@layer utilities {
  /* caslon-utilities: bg-primary-15-15/10 */
  .bg-primary-15-15\\/10 {
    background-color: var(---color-primary-15-15);
    @supports (color: color-mix(in lab, red, red)) {
      background-color: color-mix(in oklab, var(---color-primary-15-15) 10%, transparent);
    }
  }
}
",
]
`;

exports[`compiler > . 3`] = `
[
  "@layer utilities {
  /* caslon-utilities: bg-primary-15-15/[71.37%] */
  .bg-primary-15-15\\/\\[71\\.37\\%\\] {
    background-color: var(---color-primary-15-15);
    @supports (color: color-mix(in lab, red, red)) {
      background-color: color-mix(in oklab, var(---color-primary-15-15) 71.37%, transparent);
    }
  }
}
",
]
`;

exports[`compiler > . 4`] = `
[
  "@layer utilities {
  /* caslon-utilities: bg-(---color-primary-15-15) */
  .bg-\\(---color-primary-15-15\\) {
    background-color: var(---color-primary-15-15);
  }
}
",
]
`;

exports[`compiler > . 5`] = `
[
  "@layer utilities {
  /* caslon-utilities: bg-(---color-primary-15-15)/10 */
  .bg-\\(---color-primary-15-15\\)\\/10 {
    background-color: var(---color-primary-15-15);
    @supports (color: color-mix(in lab, red, red)) {
      background-color: color-mix(in oklab, var(---color-primary-15-15) 10%, transparent);
    }
  }
}
",
]
`;

exports[`compiler > . 6`] = `
[
  "@layer utilities {
  /* caslon-utilities: bg-[primary-15-15] */
  .bg-\\[primary-15-15\\] {
    background-color: primary-15-15;
  }
}
",
]
`;

exports[`compiler > . 7`] = `
[
  "@layer utilities {
  /* caslon-utilities: bg-linear-to-t, from-primary-50-50, to-0-50-50 */
  .bg-linear-to-t {
    --tw-gradient-position: to top;
    @supports (background-image: linear-gradient(in lab, red, red)) {
      --tw-gradient-position: to top in oklab;
    }
    background-image: linear-gradient(var(--tw-gradient-stops));
  }
  .from-primary-50-50 {
    --tw-gradient-from: var(---color-primary-50-50);
    --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
  }
  .to-0-50-50 {
    --tw-gradient-to: var(---color-0-50-50);
    --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
  }
}

@property --tw-gradient-position {
  syntax: "*";
  inherits: false;
}
@property --tw-gradient-from {
  syntax: "<color>";
  inherits: false;
  initial-value: #0000;
}
@property --tw-gradient-via {
  syntax: "<color>";
  inherits: false;
  initial-value: #0000;
}
@property --tw-gradient-to {
  syntax: "<color>";
  inherits: false;
  initial-value: #0000;
}
@property --tw-gradient-stops {
  syntax: "*";
  inherits: false;
}
@property --tw-gradient-via-stops {
  syntax: "*";
  inherits: false;
}
@property --tw-gradient-from-position {
  syntax: "<length-percentage>";
  inherits: false;
  initial-value: 0%;
}
@property --tw-gradient-via-position {
  syntax: "<length-percentage>";
  inherits: false;
  initial-value: 50%;
}
@property --tw-gradient-to-position {
  syntax: "<length-percentage>";
  inherits: false;
  initial-value: 100%;
}
",
]
`;
